# sway

./: Cargo.toml
.github/workflows/: gh-pages.yml  nightly-release.yml  release.yml
docs/forc/src/: SUMMARY.md  index.md
forc-pkg/: Cargo.toml
forc-pkg/src/: manifest.rs  pkg.rs
forc/src/ops/: forc_template.rs
forc/src/utils/: helpers.rs
master/book/: print.html  searchindex.json
new-parser-again/: Cargo.toml
new-parser-again/src/: brackets.rs  dependency.rs  generics.rs  ident.rs  keywords.rs  lib.rs  literal.rs  parse.rs  parser.rs  path.rs  pattern.rs  priv_prelude.rs  program.rs  punctuated.rs  span.rs  statement.rs  token.rs
new-parser-again/src/expr/: asm.rs  mod.rs  op_code.rs
new-parser-again/src/item/: item_enum.rs  item_impl.rs  item_storage.rs  item_struct.rs  item_trait.rs  item_use.rs  mod.rs
new-parser-again/src/ty/: mod.rs
scripts/mdbook-forc-documenter/src/: commands.rs
sway-core/: Cargo.toml
sway-core/src/: convert_parse_tree.rs  error.rs  lib.rs  new_parser_compat.rs  optimize.rs  parse_tree.rs
sway-core/src/asm_generation/: from_ir.rs  mod.rs
sway-core/src/asm_lang/: allocated_ops.rs  virtual_ops.rs
sway-core/src/control_flow_analysis/: analyze_return_paths.rs
sway-core/src/parse_tree/: call_path.rs  code_block.rs  include_statement.rs  literal.rs  return_statement.rs  use_statement.rs  while_loop.rs
sway-core/src/type_engine/: type_info.rs
sway-core/src/types/: resolved_type.rs
sway-ir/src/: metadata.rs  parser.rs
sway-types/src/: span.rs
v0.33.2/: index.html
v0.33.3/: index.html  searchindex.js
(+43 files in other folders)
