[workspace]
resolver = "2"
members = [
    "docstrings",
    "examples/build-all-examples",
    "forc",
    "parser",
    "sway-core",
    "sway-fmt",
    "sway-ir",
    "sway-server",
    "sway-types",
    "sway-utils",
    "test",
    "test-sig-gen-util",
    "new-parser-again",
]
exclude = [
    "examples/fizzbuzz",
    "examples/hello_world",
    "examples/subcurrency",
    "examples/wallet_smart_contract",
]

[profile.dev.package.sway-server]
debug = 2
